@@ -1,3 +1,6 @@
+14 September 2004 Sylvain Pion
+- Filtered_kernel : cleanup.
+
 13 September 2004 Sylvain Pion
 - Filtered_kernel : use converters C2E/C2F from the final kernel objects, and not
   its Kernel_base.
